Fixed width issues for blog posts on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -311,4 +311,11 @@ Media queries
       margin-top: 35px;
     }
   }
+
+  section {
+    img {
+      width: 100%;
+      margin-top: 35px;
+    }
+  }
 }
